--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
+  <title>Snake Game</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
+  <link rel="icon" type="image/x-icon" href="snake.webp">
 </head>
 
 <body>
@@ -15,19 +16,16 @@
       <div class="score">0</div>
     </header>
     <div class="grid"></div>
-    <footer>Press an arrow key or space to start!
-      <div>Ready for hard more? Press H
+    <footer id="footer">Press an arrow key or space to start!
+      <div>Ready for hard more? Press H </div>
     </footer>
-  </div>
+    <div id="restart"><button type="button" onclick="window.location.reload();">Try Again</button>
+    </div>
 
-  <script src="script.js"></script>
+    <script src="script.js"></script>
 
-  <!--
-  This script places a badge on your repl's full-browser view back to your repl's cover
-  page. Try various colors for the theme: dark, light, red, orange, yellow, lime, green,
-  teal, blue, blurple, magenta, pink!
-  -->
-  <script src="https://replit.com/public/js/replit-badge-v2.js" theme="dark" position="bottom-right"></script>
+
+    </script>
 </body>
 
 </html>
